# aoi

./: .gitignore  .metadata  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ffigen.yaml  melos.yaml  pubspec.yaml
.github/: FUNDING.yml  dependabot.yaml  dependabot.yml
.github/workflows/: build.yaml  build.yml  combine-prs.yaml  create-release.yml  publish-release.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/src/main/: AndroidManifest.xml
aoi/: Cargo.toml  build.rs
aoi/aoi.xcodeproj/: project.pbxproj
aoi/src/: api.rs  bridge_generated.rs  implementation.rs
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
ios/: .gitignore  aoi.podspec
ios/Classes/: aoi.c
ios/Runner/: Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: aoi.dart  aoi_bindings_generated.dart  bridge_definitions.dart  bridge_definitions.freezed.dart  bridge_generated.dart  bridge_generated.freezed.dart  bridge_generated.io.dart  bridge_generated.web.dart  ffi.dart  main.dart
linux/: CMakeLists.txt
macos/: .gitignore  aoi.podspec
macos/Runner/: MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
native/: Cargo.toml  build.rs
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  implementation.rs  lib.rs
scripts/: build-android.sh  build-apple.sh  build-other.sh  version.sh
src/: CMakeLists.txt  aoi.c
windows/: CMakeLists.txt  rust.cmake
(+10 files in other folders)
